# mcp-inspector-desktop

./: .gitignore  README.md  claude-progress.txt  feature_list.json  index.html  init.bat  init.sh  package-lock.json  package.json  prd.md  update_features.py
.claude/: README.md  coding-agent.md  init-system.md  initializer-agent.md
.claude/skills/long-running-agent/: SKILL.md
.claude/skills/long-running-agent/references/: feature_list.json  progress_template.txt  session_workflow.md  templates_guide.md
.claude/skills/long-running-agent/scripts/: init_template.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/config/: mod.rs  storage.rs
src-tauri/src/inspector/: mod.rs  process.rs
src/components/: InspectorView.tsx  Launcher.tsx
src/styles/: globals.css
